@@ -1,15 +1,8 @@
 <div id="classindex-section" class="section project-section">
-  <h3 class="section-header">Class and Module Index
-    <span class="search-toggle"><img src="<%= rel_prefix %>/images/find.png"
-      height="16" width="16" alt="[+]"
-      title="show/hide quicksearch" /></span></h3>
+  <h3 class="section-header">Class and Module Index</h3>
 
   <form action="#" method="get" accept-charset="utf-8" class="initially-hidden">
-    <fieldset>
-      <legend>Quicksearch</legend>
-      <input type="text" name="quicksearch" value=""
-        class="quicksearch-field" />
-    </fieldset>
+    <input type="text" name="quicksearch" id="quicksearch-field" />
   </form>
 
   <ul class="link-list">
