@@ -6,6 +6,7 @@
       headings inside a page or class.
     * Class pages no longer show the namespace and no longer have file info
       pages.
+    * Quicksearch box in Class/Module Index in the sidebar is always shown.
   * RDoc supports RD format documentation.
 
 * Minor enhancements
